made changes to redirects

--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - My Portfolio</title>
+    <title>Projects - nusrathsyed.com</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
         <nav>
             <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
             <div id="nav-links" class="hidden">
-                <a href="index.html">Home</a>
+                <a href="lander.html">About</a>
                 <a href="projects.html">Projects</a>
                 <a href="skills.html">Skills</a>
             </div>
