--- a/skills.html
+++ b/skills.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skills - nusrathsyed.com</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
         <nav>
             <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
             <div id="nav-links" class="hidden">
-                <a href="lander.html">About</a>
+                <a href="index.html">About</a>
                 <a href="projects.html">Projects</a>
                 <a href="skills.html">Skills</a>
             </div>
