same look across all pages

--- a/skills.html
+++ b/skills.html
@@ -9,18 +9,21 @@
 <body>
     <header>
         <div class="header-left">
-            <img src="/images/nusrathmemoji.png" alt="Nusrath Syed" id="home-img">
+            <img src="images/nusrathmemoji.png" alt="Nusrath Syed" id="home-img">
         </div>
-        <h1>Welcome</h1>
-        <nav>
-            <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
-            <div id="nav-links" class="hidden">
-                <a href="index.html">About</a>
-                <a href="projects.html">Projects</a>
-                <a href="skills.html">Skills</a>
-            </div>
-        </nav>
+        <div class="header-right">
+            <h1>Nusrath Syed</h1>
+            <h2>Software Engineer</h2>
+            <p>I build software and solve problems.</p>
+        </div>
     </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="skills.html">Skills</a></li>
+        </ul>
+    </nav>
     <main>
         <section id="skills">
             <h2>Skills</h2>
