Updated work experience section and link to resume

--- a/index.html
+++ b/index.html
@@ -30,7 +30,81 @@
     <main>
         <section id="home">
             <div class="content-container">
-                <p>Hi there! I'm a software developer who graduated from Sheridan College and York University, and I'm all about tech—whether it's reviewing the latest gadgets, competing in hackathons, or diving deep into all things tech. When I'm not coding up a storm, you'll probably find me experimenting in the kitchen, creating art, or just enjoying the endless possibilities of the tech world. Let's just say, if it involves creativity, problem-solving, or a good snack, I'm in!</p>
+                <p>Hi there! I'm a software developer who graduated from Sheridan College and York University, and I'm all about tech <br>
+                    whether it's reviewing the latest gadgets, competing in hackathons, or diving deep into all things tech.  <br> 
+                    When I'm not coding up a storm, you'll probably find me experimenting in the kitchen, creating art, or just enjoying the endless <br> 
+                    possibilities of the tech world. Let's just say, if it involves creativity, problem-solving, or a good snack, I'm in!
+                </p>
+                <div class="work-experience">
+                    <h2>Work Experience</h2>
+                    <div class="experience">
+                        <div class="date">June 2024 - August 2024</div>
+                        <div class="details">
+                            <h3>Prism Eye Institute</h3>
+                            <p>Front line of support for patients, assisting with appointments, referrals, and inquiries through Ocean and Oscar.</p>
+                            <p>Prioritized patient needs and escalated issues through the call center.</p>
+                            <div class="tech-stack">
+                                <span>Ocean</span>
+                                <span>Oscar</span>
+                                <span>Call Center Experience</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="experience">
+                        <div class="date">May 2023 - August 2023</div>
+                        <div class="details">
+                            <h3>Skill Squirrel</h3>
+                            <p>Spearheaded research and development of Cloud AI tools, leading to actionable recommendations and advancements.</p>
+                            <p>Enhanced productivity through optimized AI solutions, resulting in cost savings.</p>
+                            <div class="tech-stack">
+                                <span>Cloud AI</span>
+                                <span>Research</span>
+                                <span>Development</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="experience">
+                        <div class="date">September 2022 - December 2022</div>
+                        <div class="details">
+                            <h3>Immigration, Refugees and Citizenship Canada (IRCC)</h3>
+                            <p>Developed VBA scripts to automate repetitive tasks and enhance deployed tools' functionality.</p>
+                            <p>Used Microsoft Access SQL for data manipulation, improving performance and efficiency.</p>
+                            <div class="tech-stack">
+                                <span>VBA</span>
+                                <span>Microsoft Access</span>
+                                <span>SQL</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="experience">
+                        <div class="date">January 2022 - April 2022</div>
+                        <div class="details">
+                            <h3>City of Mississauga</h3>
+                            <p>Streamlined IT support, triaged tasks at the 2nd level, and enhanced customer satisfaction through the Tech Hub.</p>
+                            <p>Managed IT assets, PC lifecycle, and imaging/deployment of PC and peripherals.</p>
+                            <div class="tech-stack">
+                                <span>Microsoft 365</span>
+                                <span>Active Directory</span>
+                                <span></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="experience">
+                        <div class="date">October 2009 - January 2018</div>
+                        <div class="details">
+                            <h3>No Frills</h3>
+                            <p>Served as the first point of contact for customers, aiding with inquiries, returns, exchanges, and product information.</p>
+                            <p>Exceptional customer service in a high-volume environment, adeptness in handling sales documentation and administration tasks.</p>
+                            <div class="tech-stack">
+                                <span>Microsoft 365</span>
+                                <span>Elvis</span>
+                                <span>Customer Service</span>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="Software%20Developer%20Nusrath.pdf" target="_blank" class="view-more">View More</a>
+                </div>
+            </section>
             </div>
         </section>
     </main>
