Added the pdf resume to the files and additional style changes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
                     possibilities of the tech world. Let's just say, if it involves creativity, problem-solving, or a good snack, I'm in!
                 </p>
                 <div class="work-experience">
-                    <h2>Work Experience</h2>
                     <div class="experience">
                         <div class="date">June 2024 - August 2024</div>
                         <div class="details">
@@ -57,9 +56,10 @@
                             <p>Spearheaded research and development of Cloud AI tools, leading to actionable recommendations and advancements.</p>
                             <p>Enhanced productivity through optimized AI solutions, resulting in cost savings.</p>
                             <div class="tech-stack">
-                                <span>Cloud AI</span>
-                                <span>Research</span>
-                                <span>Development</span>
+                                <span>Open AI</span>
+                                <span>Langchain</span>
+                                <span>HuggingFace</span>
+                                <span>Python</span>
                             </div>
                         </div>
                     </div>
@@ -85,7 +85,7 @@
                             <div class="tech-stack">
                                 <span>Microsoft 365</span>
                                 <span>Active Directory</span>
-                                <span></span>
+                                <span>Microsoft SCCM</span>
                             </div>
                         </div>
                     </div>
@@ -102,7 +102,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="Software%20Developer%20Nusrath.pdf" target="_blank" class="view-more">View More</a>
+                    <a href="/Software Developer Nusrath.pdf" target="_blank" class="view-more">View More</a>
                 </div>
             </section>
             </div>
