fixed mouse styles

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="content-container">
                 <p>Hi there! I'm a software developer who graduated from Sheridan College and York University, and I'm all about tech <br>
                     whether it's reviewing the latest gadgets, competing in hackathons, or diving deep into all things tech.  <br> 
-                    When I'm not coding up a storm, you'll probably find me experimenting in the kitchen, creating art, or just enjoying the endless <br> 
+                    When I'm not coding up a storm, you'll probably find me experimenting in the kitchen, creating art, or just enjoying the endless
                     possibilities of the tech world. Let's just say, if it involves creativity, problem-solving, or a good snack, I'm in!
                 </p>
                 <div class="work-experience">
