Added Name and headliner to left side

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     </header>
     <nav>
         <ul>
+            <li><h1>Nusrath Syed</h1></li>
+            <h2>Software Engineer</h2>
+            <p>I build software and solve problems.</p>
             <li><a href="index.html">About</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="skills.html">Skills</a></li>
