fixed layout of landing page

--- a/index.html
+++ b/index.html
@@ -9,108 +9,109 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="header-left">
-            <img src="images/nusrathmemoji.png" alt="Nusrath Syed" id="home-img">
+    <div class = "wrapper">
+        <div class="sidebar">
+            <header>
+                <img src="images/nusrathmemoji.png" alt="Nusrath Syed" id="profile-img">
+                <h1>Nusrath Syed</h1>
+                <h3>Software Engineer</h3>
+                <p>I build software and solve problems.</p>
+            </header>
+            <nav>
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="skills.html">Skills</a></li>
+                </ul>
+            </nav>
         </div>
-        <div class="header-right">
-            <h1>Nusrath Syed</h1>
-            <h2>Software Engineer</h2>
-            <p>I build software and solve problems.</p>
-        </div>
-    </header>
-    <nav>
-        <ul>
-            <li><h1>Nusrath Syed</h1></li>
-            <h2>Software Engineer</h2>
-            <p>I build software and solve problems.</p>
-            <li><a href="index.html">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="skills.html">Skills</a></li>
-        </ul>
-    </nav>
 
-    <main>
-        <section id="home">
-            <div class="content-container">
-                <p>Hi there! I'm a software developer who graduated from Sheridan College and York University, and I'm all about tech <br>
-                    whether it's reviewing the latest gadgets, competing in hackathons, or diving deep into all things tech.  <br> 
-                    When I'm not coding up a storm, you'll probably find me experimenting in the kitchen, creating art, or just enjoying the endless
-                    possibilities of the tech world. Let's just say, if it involves creativity, problem-solving, or a good snack, I'm in!
+        <main>
+            <section id="home">
+                <p>
+                    Hi there! I'm a software developer who graduated from Sheridan College and York University. 
+                    I'm all about tech—whether it's reviewing the latest gadgets, competing in hackathons, or diving into all things tech.
                 </p>
-                <div class="work-experience">
-                    <div class="experience">
-                        <div class="date">June 2024 - August 2024</div>
-                        <div class="details">
-                            <h3>Prism Eye Institute</h3>
-                            <p>Front line of support for patients, assisting with appointments, referrals, and inquiries through Ocean and Oscar.</p>
-                            <p>Prioritized patient needs and escalated issues through the call center.</p>
-                            <div class="tech-stack">
-                                <span>Ocean</span>
-                                <span>Oscar</span>
-                                <span>Call Center Experience</span>
+                <p>
+                    When I'm not coding up a storm, you'll probably find me experimenting in the kitchen, creating art, 
+                    or just enjoying the endless possibilities of the tech world. If it involves creativity, problem-solving, or a good snack, I'm in!
+                </p>
+                <p>
+                    My technical expertise and professional experiences include working on innovative projects, 
+                    improving workflows, and delivering software solutions in various domains. Explore my resume below for more details.
+                </p>
+                    <div class="work-experience">
+                        <div class="experience">
+                            <div class="date">June 2024 - August 2024</div>
+                            <div class="details">
+                                <h3>Prism Eye Institute</h3>
+                                <p>Front line of support for patients, assisting with appointments, referrals, and inquiries through Ocean and Oscar.</p>
+                                <p>Prioritized patient needs and escalated issues through the call center.</p>
+                                <div class="tech-stack">
+                                    <span>Ocean</span>
+                                    <span>Oscar</span>
+                                    <span>Call Center Experience</span>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="experience">
-                        <div class="date">May 2023 - August 2023</div>
-                        <div class="details">
-                            <h3>Skill Squirrel</h3>
-                            <p>Spearheaded research and development of Cloud AI tools, leading to actionable recommendations and advancements.</p>
-                            <p>Enhanced productivity through optimized AI solutions, resulting in cost savings.</p>
-                            <div class="tech-stack">
-                                <span>Open AI</span>
-                                <span>Langchain</span>
-                                <span>HuggingFace</span>
-                                <span>Python</span>
+                        <div class="experience">
+                            <div class="date">May 2023 - August 2023</div>
+                            <div class="details">
+                                <h3>Skill Squirrel</h3>
+                                <p>Spearheaded research and development of Cloud AI tools, leading to actionable recommendations and advancements.</p>
+                                <p>Enhanced productivity through optimized AI solutions, resulting in cost savings.</p>
+                                <div class="tech-stack">
+                                    <span>Open AI</span>
+                                    <span>Langchain</span>
+                                    <span>HuggingFace</span>
+                                    <span>Python</span>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="experience">
-                        <div class="date">September 2022 - December 2022</div>
-                        <div class="details">
-                            <h3>Immigration, Refugees and Citizenship Canada (IRCC)</h3>
-                            <p>Developed VBA scripts to automate repetitive tasks and enhance deployed tools' functionality.</p>
-                            <p>Used Microsoft Access SQL for data manipulation, improving performance and efficiency.</p>
-                            <div class="tech-stack">
-                                <span>VBA</span>
-                                <span>Microsoft Access</span>
-                                <span>SQL</span>
+                        <div class="experience">
+                            <div class="date">September 2022 - December 2022</div>
+                            <div class="details">
+                                <h3>Immigration, Refugees and Citizenship Canada (IRCC)</h3>
+                                <p>Developed VBA scripts to automate repetitive tasks and enhance deployed tools' functionality.</p>
+                                <p>Used Microsoft Access SQL for data manipulation, improving performance and efficiency.</p>
+                                <div class="tech-stack">
+                                    <span>VBA</span>
+                                    <span>Microsoft Access</span>
+                                    <span>SQL</span>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="experience">
-                        <div class="date">January 2022 - April 2022</div>
-                        <div class="details">
-                            <h3>City of Mississauga</h3>
-                            <p>Streamlined IT support, triaged tasks at the 2nd level, and enhanced customer satisfaction through the Tech Hub.</p>
-                            <p>Managed IT assets, PC lifecycle, and imaging/deployment of PC and peripherals.</p>
-                            <div class="tech-stack">
-                                <span>Microsoft 365</span>
-                                <span>Active Directory</span>
-                                <span>Microsoft SCCM</span>
+                        <div class="experience">
+                            <div class="date">January 2022 - April 2022</div>
+                            <div class="details">
+                                <h3>City of Mississauga</h3>
+                                <p>Streamlined IT support, triaged tasks at the 2nd level, and enhanced customer satisfaction through the Tech Hub.</p>
+                                <p>Managed IT assets, PC lifecycle, and imaging/deployment of PC and peripherals.</p>
+                                <div class="tech-stack">
+                                    <span>Microsoft 365</span>
+                                    <span>Active Directory</span>
+                                    <span>Microsoft SCCM</span>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="experience">
-                        <div class="date">October 2009 - January 2018</div>
-                        <div class="details">
-                            <h3>No Frills</h3>
-                            <p>Served as the first point of contact for customers, aiding with inquiries, returns, exchanges, and product information.</p>
-                            <p>Exceptional customer service in a high-volume environment, adeptness in handling sales documentation and administration tasks.</p>
-                            <div class="tech-stack">
-                                <span>Microsoft 365</span>
-                                <span>Elvis</span>
-                                <span>Customer Service</span>
+                        <div class="experience">
+                            <div class="date">October 2009 - January 2018</div>
+                            <div class="details">
+                                <h3>No Frills</h3>
+                                <p>Served as the first point of contact for customers, aiding with inquiries, returns, exchanges, and product information.</p>
+                                <p>Exceptional customer service in a high-volume environment, adeptness in handling sales documentation and administration tasks.</p>
+                                <div class="tech-stack">
+                                    <span>Microsoft 365</span>
+                                    <span>Elvis</span>
+                                    <span>Customer Service</span>
+                                </div>
                             </div>
                         </div>
+                        <a href="/Software Developer Nusrath.pdf" target="_blank" class="view-more">View More</a>
                     </div>
-                    <a href="/Software Developer Nusrath.pdf" target="_blank" class="view-more">View More</a>
-                </div>
-            </section>
-            </div>
-        </section>
-    </main>
+                </section>
+        </main>
+    </div>
     <footer>
         <div class="social-icons">
             <a href="https://github.com/nusrathsyed" target="_blank" class="social-icon"><i class="fab fa-github"></i></a>
