removed skills section

--- a/projects.html
+++ b/projects.html
@@ -32,21 +32,20 @@
                 <a href="https://github.com/nusrathsyed/portfolio">View Code</a>
             </div>
             <div class="project">
-                <h3>Task Manager</h3>
-                <p>A web-based task management application using JavaScript and local storage for task persistence. It helps users manage daily tasks effectively.</p>
-                <a href="https://github.com/nusrathsyed/task-manager">View Code</a>
+                <h3>Fitness Boutique</h3>
+                <p>A web-based fitness store application using Java and mongodb for database persistence. It helps users manage store inventory effectively.</p>
+                <a href="https://github.com/nusrathsyed/fitness-boutique">View Code</a>
+            </div>
+            <div class="project">
+                <h3>Angelica Acosta </h3>
+                <p>A web-based application for our client using Java and angular. It helps the client manage her fitnes page and classes and .</p>
+                <a href="https://github.com/nusrathsyed/">View Code</a>
             </div>
         </section>
     </main>
     <footer>
         <p>&copy; 2024 Nusrath Syed. All rights reserved.</p>
     </footer>
-
-    <script>
-        function toggleMenu() {
-            const menu = document.getElementById('nav-links');
-            menu.classList.toggle('hidden');
-        }
-    </script>
+    <script src="script.js"></script> <!-- Reference to the external script.js -->
 </body>
 </html>
