--- a/projects.html
+++ b/projects.html
@@ -4,26 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - nusrathsyed.com</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style.css"> <!-- Reference to the external style.css -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="header-left">
-            <img src="images/nusrathmemoji.png" alt="Nusrath Syed" id="home-img">
+    <div class = "wrapper">
+        <div class="sidebar">
+            <header>
+                <img src="images/nusrathmemoji.png" alt="Nusrath Syed" id="profile-img">
+                <h1>Nusrath Syed</h1>
+                <h3>Software Engineer</h3>
+                <p>I build software and solve problems.</p>
+            <nav>
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                </ul>
+            </nav>
         </div>
-        <div class="header-right">
-            <h1>Nusrath Syed</h1>
-            <h2>Software Engineer</h2>
-            <p>I build software and solve problems.</p>
-        </div>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="skills.html">Skills</a></li>
-        </ul>
-    </nav>
     <main>
         <section id="projects">
             <div class="project">
@@ -38,13 +37,14 @@
             </div>
             <div class="project">
                 <h3>Angelica Acosta </h3>
-                <p>A web-based application for our client using Java and angular. It helps the client manage her fitnes page and classes and .</p>
+                <p>A web-based application for our client using Java and angular. It helps the client manage her fitnes page, classes and more .</p>
                 <a href="https://github.com/nusrathsyed/">View Code</a>
             </div>
         </section>
     </main>
+    </div>
     <footer>
-        <p>&copy; 2024 Nusrath Syed. All rights reserved.</p>
+        <p> 2024 Nusrath Syed.</p>
     </footer>
     <script src="script.js"></script> <!-- Reference to the external script.js -->
 </body>
