updated about section

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <main>
             <section id="home">
                 <p>
-                    Hi there! I'm a software developer who graduated from Sheridan College and York University.
-                    I'm all about tech—whether it's reviewing the latest gadgets, competing in hackathons, or diving into all things tech.
+                    Hi there! I'm Nusrath, a software developer with a passion for technology, creativity, and problem-solving.
+                    Whether it's reviewing the latest gadgets, competing in hackathons, or building innovative software solutions, I'm always up for a challenge.
                   </p>
                   <p>
                     When I'm not coding up a storm, you'll probably find me experimenting in the kitchen, creating art,
-                    or just enjoying the endless possibilities of the tech world. If it involves creativity, problem-solving, or a good snack, I'm in!
+                    or just enjoying reviews on the latest tech gadgets. If it involves creativity, problem-solving, or a good snack, I'm in!
                   </p>
                   <p>
                     My technical expertise and professional experiences include working on innovative projects,
