--- a/index.html
+++ b/index.html
@@ -41,6 +41,23 @@
                   </p>
                   <div class="work-experience">
                     <div class="experience">
+                      <div class="date">Present</div>
+                      <div class="details">
+                        <h3>CGI</h3>
+                        <p>Developed and deployed scalable microservices using Java and Spring Boot and contributed to improve system and code maintainability.</p>
+                        <p>Implemented microservices architecture with AWS Cloud and gave technical mentorship to other developers to boost team efficiency.</p>
+                        <div class="tech-stack">
+                          <span>Java</span>
+                          <span>Javascript</span>
+                          <span>Angular</span>
+                          <span>MySql</span>
+                          <span>JIRA</span>
+                          <span>Git</span>
+                        </div>
+                      </div>
+                    </div>
+                  <div class="work-experience">
+                    <div class="experience">
                       <div class="date">June 2024 - August 2024</div>
                       <div class="details">
                         <h3>Prism Eye Institute</h3>
